schema/testdata/validation_relationships_one_to_many_duplicate_relation_to_many_side/schema.keel
model Author {
    fields {
        written Post @relation(author)
        coWritten Post @relation(author)
    }
}

model Post {
    fields {
        author Author[]
    }
}
